--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,14 @@
 --- #YAML:1.0
 name:                Mac-iPhoto-Shell
-version:             0.15
-abstract:            ~
+version:             0.16
+abstract:            Play with iPhoto from the command line
 license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.31
+generated_by:        ExtUtils::MakeMaker version 6.36
 distribution_type:   module
 requires:     
     Mac::Glue:                     1.28
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
 author:
     - brian d foy <bdfoy@cpan.org>
